changed the menu

--- a/index.html
+++ b/index.html
@@ -28,100 +28,101 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a class="nav-title-link" href="./index.html">
         <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span>
         <a class="button" href="mailto:samuelcarlisle@gmail.com">
-          <span class="button-text">Contact Me</span>
+          <span class="button-text">Contact</span>
         </a>
       </a>
     </div>
-    <div id="navbar">
-      <div style="float: left" id="my_menu" class="sdmenu">
-        <div>
-          <span>Home > samthetechie</span>
-          <a href="./home/bio.html">Bio</a>          
-          <a href="./home/contact.html">Contact</a>
-        </div>
-        <div class="collapsed">
-          <span>Portfolio > Projects</span>
-          <a href="./projects/reprap.html">Reprap Opensource 3D Printer</a>          
-          <a href="./projects/animachine.html">Animachine @Youin3D, Berlin</a>
-          <a href="./projects/buildingbanter.html">Industrial Energy Monitoring. Data Vis. Behaviour Change. "Building Banter" @Moixa, London</a>
-          <a href="./projects/classic4.html">Classic 4: EAP / TENS Accupuncture @Harmony, London</a>
-          <a href="./projects/nanode.html">Network Open Source Hardware for Makers, London</a>
-          <a href="./projects/ltfhc.html">Solar Powered HF Radio Synchronised Electronic Medical Records System @Iilab, Berlin</a>
-          <a href="./projects/thinkfarm.html">Sustainability Research @Thinkfarm, Berlin</a>
-          <a href="./projects/ose.html">Open Source Ecology, USA</a>          
-        </div>
-        <div class="collapsed">
-          <span>Portfolio > Actions</span>
-          <a href="./actions/ucloccupation.html">UCL Occupation</a>
-          <a href="./actions/occupylondon.html">Occupy London Tech Team</a>
-          <a href="./actions/cryptoparty.html">Cryptoparty London</a>
-          <a href="./actions/hurricanesandy.html">Hurricane Hackers</a>
-          <a href="./actions/fliehkraft.html">Fliehkraft, Berlin</a>
-          <a href="./actions/ecovillage.html">Eco Village</a>          
-        </div>
-        <div class="collapsed">
-          <span>Portfolio > Academia</span>
-          <a href="./academia/ch.html">Overview</a>
-          <a href="./academia/durham.html">About</a>
-          <a href="./academia/mit.html">Curriculum Vitae</a>
-        </div>
-        <div class="collapsed">
-          <span>Portfolio > Creative</span>
-          <a href="./art/writing.html">Writing</a>
-          <a href="./art/artwork.html">Artwork</a>
-          <a href="./art/concepts.html">Concepts & Design</a>                             
-        </div>
-        <div class="collapsed">
-          <span>Portfolio > Talks</span>
-          <a href="./talks/ccc.html">Assembly + Lightning Talk @CCC</a>
-          <a href="./talks/pp_intl.html">RW Society @PP Intl</a>
-          <a href="./talks/fabrica.html">Trust but Verify @Fabrica</a>
-          <a href="./talks/frontline.html">Revolutionary Apps @Frontline Club</a>
-          <a href="./talks/talklist.html">List: Talks</a>          
-        </div>
-        <div class="collapsed">
-          <span>Lists of things I like</span>
-          <a href="./art/poetrylist.html">Poetry</a>
-          <a href="./art/filmlist.html">Film</a>
-          <a href="./art/booklist.html">Books</a>
-          <a href="./art/musiclist.html">Music</a>          
-        </div>        
-        <div class="collapsed">
-          <span>Service > Consulting</span>
-          <a href="./service/engineering.html">IT / Engineering</a>
-          <a href="./sevice/security.html">Security</a>
-          <a href="./service/sustainability.html">Sustainability</a>          
-        </div>
-        <div class="collapsed">
-          <span>Service > Programming</span>
-          <a href="./service/programming.html">Examples of My Work</a>
-        </div>        
-        <div class="collapsed">
-          <span>Service > Webdev</span>
-          <a href="./service/web.html">Webdesign and Development</a>          
-          <a href="./service/web_examples.html">Examples of My Work</a>
-          <a href="./service/web_feedback.html">Client Feedback</a>          
-        </div>
-        <div class="collapsed">
-          <span>Service > PC Repair</span>
-          <a href="./service/onsite_repair.html">Onsite Support</a>
-          <a href="./service/remote_repair.html">Remote Support</a>
-          <a href="./service/repair_feedback.html">Reviews</a>
-        </div>
-        <div class="collapsed">
-          <span>Service > Clients</span>
-          <a href="./service/current_clients.html">Current Clients</a>          
-          <a href="./service/previous_clients.html">Previous Clients</a>
-        </div>      
-        <div class="collapsed">
-          <span>Service > Personal</span>
-          <a href="./service/mentoring.html">Mentoring</a>
-          <a href="./service/business_development.html">Business Development</a>          
-        </div>        
-      </div>
-    </div>
+
+ <!-- The overlay -->
+<div id="myNav" class="overlay">
+
+  <!-- Button to close the overlay navigation -->
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+  <!-- Overlay content -->
+  <div class="overlay-content">
+    <p>Home:</p>
+    <hr>
+    <a href="./index.html">> Home</a>    
+    <a href="./home/bio.html">> Bio</a>
+    <a href="./home/contact.html">> Contact</a>
+    <p>Portfolio > Projects:</p>
+    <hr>
+    <a href="./projects/reprap.html">> Reprap Opensource 3D Printer</a>          
+    <a href="./projects/animachine.html">> Animachine @Youin3D, Berlin</a>
+    <a href="./projects/buildingbanter.html">> Industrial Energy Monitoring</a>
+    <a href="./projects/classic4.html">> Medical Device Firmware</a>
+    <a href="./projects/nanode.html">> Nanode, DIY IoT Device</a>
+    <a href="./projects/ltfhc.html">> Electronic Medical Records</a>
+    <a href="./projects/thinkfarm.html">> Sustainability Research</a>
+    <a href="./projects/ose.html">> Open Source Ecology</a>          
+    <p>Portfolio > Actions:</p>
+    <hr>
+    <a href="./actions/ucloccupation.html">> UCL Occupation</a>
+    <a href="./actions/occupylondon.html">> Occupy London Tech Team</a>
+    <a href="./actions/cryptoparty.html">> Cryptoparty London</a>
+    <a href="./actions/hurricanesandy.html">> Hurricane Hackers</a>
+    <a href="./actions/fliehkraft.html">> Fliehkraft, Berlin</a>
+    <a href="./actions/ecovillage.html">> Eco Village</a>          
+    <p>Portfolio > Academia:</p>
+    <hr>
+    <a href="./academia/ch.html">> Overview</a>
+    <a href="./academia/durham.html">> About</a>
+    <a href="./academia/mit.html">> Curriculum Vitae</a>
+    <p>Portfolio > Creative:</p>
+    <hr>
+    <a href="./art/writing.html">> Writing</a>
+    <a href="./art/artwork.html">> Artwork</a>
+    <a href="./art/concepts.html">> Concepts & Design</a>                             
+    <p>Portfolio > Talks:</p>
+    <hr>
+    <a href="./talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
+    <a href="./talks/pp_intl.html">> RW Society @PP Intl</a>
+    <a href="./talks/fabrica.html">> Trust but Verify @Fabrica</a>
+    <a href="./talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
+    <a href="./talks/talklist.html">> List: Talks</a>          
+    <p>Lists of things I like:</p>
+    <hr>
+    <a href="./art/poetrylist.html">> Poetry</a>
+    <a href="./art/filmlist.html">> Film</a>
+    <a href="./art/booklist.html">> Books</a>
+    <a href="./art/musiclist.html">> Music</a>          
+    <p>Service > Consulting</p>
+    <hr>
+    <a href="./service/engineering.html">> IT / Engineering</a>
+    <a href="./sevice/security.html">> Security</a>
+    <a href="./service/sustainability.html">> Sustainability</a>          
+    <p>Service > Programming:</p>
+    <hr>
+    <a href="./service/programming.html">> Examples of My Work</a>
+    <p>Service > Webdev:</p>
+    <hr>
+    <a href="./service/web.html">> Webdesign and Development</a>          
+    <a href="./service/web_examples.html">> Examples of My Work</a>
+    <a href="./service/web_feedback.html">> Client Feedback</a>          
+    <p>Service > PC Repair</p>
+    <hr>
+    <a href="./service/onsite_repair.html">> Onsite Support</a>
+    <a href="./service/remote_repair.html">> Remote Support</a>
+    <a href="./service/repair_feedback.html">> Reviews</a>
+    <p>Service > Clients:</p>
+    <hr>
+    <a href="./service/current_clients.html">> Current Clients</a>          
+    <a href="./service/previous_clients.html">> Previous Clients</a>
+    <p>Service > Personal:</p>
+    <hr>
+    <a href="./service/mentoring.html">> Mentoring</a>
+    <a href="./service/business_development.html">> Business Development</a>          
+  </div>
+
+</div>
+
+<!-- Use any element to open/show the overlay navigation menu -->
+<span onclick="openNav()">open</span> 
+
     <!-- MAIN PAGE CONTENT -->
     <div id="main-content">
+      <span onclick="openNav()" class="button">Menu</span>
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
         <div id="portfolio-header-image-container">
