--- a/projects/animachine.html
+++ b/projects/animachine.html
@@ -1,40 +1,128 @@
 
+<!--                                                                              
+                     _   _          _            _     _                           
+                    | | | |        | |          | |   (_)                          
+ ___  __ _ _ __ ___ | |_| |__   ___| |_ ___  ___| |__  _  ___   
+/ __|/ _` | '_ ` _ \| __| '_ \ / _ \ __/ _ \/ __| '_ \| |/ _ \ 
+\__ \ (_| | | | | | | |_| | | |  __/ ||  __/ (__| | | | |  __/
+|___/\__,_|_| |_| |_|\__|_| |_|\___|\__\___|\___|_| |_|_|\___|
+HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
+-->
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
 
-     <link rel="icon" href="assets/icons/favicon.ico" />
-     <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
-    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="./assets/icons/favicon.ico" />
+  <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
+  <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="stylesheet" href="../css/layout.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/utilities.css">
+  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="../css/typography.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
-		<script defer src="../js/script.js"></script>
-	</head>
-	<body>
-    <!-- NAVBAR -->
-    <div class="navbar">
-      <a class="nav-title-link" href="../index.html">
-        <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</span>
+  <script defer src="../js/script.js"></script>
+</head>
+<body>
+  <!-- NAVBAR -->
+  <div class="navbar">
+    <a class="nav-title-link" href="../index.html">
+      <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</span>
+      <span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
+    </a>
+  </div>
 
-        <a class="button" href="mailto:samuelcarlisle@gmail.com">
-          <span class="button-text">Contact Me</span>
-        </a>
-      </a>
+  <!-- The overlay -->
+  <div id="myNav" class="overlay">
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <p>Home:</p>
+      <hr>
+      <a href="./index.html">> Home</a>
+      <a href="./home/bio.html">> Bio</a>
+      <a href="./home/contact.html">> Contact</a>
+      <p>Portfolio > Projects:</p>
+      <hr>
+      <a href="./projects/reprap.html">> Reprap Opensource 3D Printer</a>
+      <a href="./projects/animachine.html">> Animachine @Youin3D, Berlin</a>
+      <a href="./projects/buildingbanter.html">> Industrial Energy Monitoring</a>
+      <a href="./projects/classic4.html">> Medical Device Firmware</a>
+      <a href="./projects/nanode.html">> Nanode, DIY IoT Device</a>
+      <a href="./projects/ltfhc.html">> Electronic Medical Records</a>
+      <a href="./projects/thinkfarm.html">> Sustainability Research</a>
+      <a href="./projects/ose.html">> Open Source Ecology</a>
+      <p>Portfolio > Actions:</p>
+      <hr>
+      <a href="./actions/ucloccupation.html">> UCL Occupation</a>
+      <a href="./actions/occupylondon.html">> Occupy London Tech Team</a>
+      <a href="./actions/cryptoparty.html">> Cryptoparty London</a>
+      <a href="./actions/hurricanesandy.html">> Hurricane Hackers</a>
+      <a href="./actions/fliehkraft.html">> Fliehkraft, Berlin</a>
+      <a href="./actions/ecovillage.html">> Eco Village</a>
+      <p>Portfolio > Academia:</p>
+      <hr>
+      <a href="./academia/ch.html">> Overview</a>
+      <a href="./academia/durham.html">> About</a>
+      <a href="./academia/mit.html">> Curriculum Vitae</a>
+      <p>Portfolio > Creative:</p>
+      <hr>
+      <a href="./art/writing.html">> Writing</a>
+      <a href="./art/artwork.html">> Artwork</a>
+      <a href="./art/concepts.html">> Concepts & Design</a>
+      <p>Portfolio > Talks:</p>
+      <hr>
+      <a href="./talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
+      <a href="./talks/pp_intl.html">> RW Society @PP Intl</a>
+      <a href="./talks/fabrica.html">> Trust but Verify @Fabrica</a>
+      <a href="./talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
+      <a href="./talks/talklist.html">> List: Talks</a>
+      <p>Lists of things I like:</p>
+      <hr>
+      <a href="./art/poetrylist.html">> Poetry</a>
+      <a href="./art/filmlist.html">> Film</a>
+      <a href="./art/booklist.html">> Books</a>
+      <a href="./art/musiclist.html">> Music</a>
+      <p>Service > Consulting</p>
+      <hr>
+      <a href="./service/engineering.html">> IT / Engineering</a>
+      <a href="./service/security.html">> Security</a>
+      <a href="./service/sustainability.html">> Sustainability</a>
+      <p>Service > Programming:</p>
+      <hr>
+      <a href="./service/programming.html">> Examples of My Work</a>
+      <p>Service > Webdev:</p>
+      <hr>
+      <a href="./service/web.html">> Webdesign and Development</a>
+      <a href="./service/web_examples.html">> Examples of My Work</a>
+      <a href="./service/web_feedback.html">> Client Feedback</a>
+      <p>Service > PC Repair</p>
+      <hr>
+      <a href="./service/onsite_repair.html">> Onsite Support</a>
+      <a href="./service/remote_repair.html">> Remote Support</a>
+      <a href="./service/repair_feedback.html">> Reviews</a>
+      <p>Service > Clients:</p>
+      <hr>
+      <a href="./service/current_clients.html">> Current Clients</a>
+      <a href="./service/previous_clients.html">> Previous Clients</a>
+      <p>Service > Personal:</p>
+      <hr>
+      <a href="./service/mentoring.html">> Mentoring</a>
+      <a href="./service/business_development.html">> Business Development</a>
     </div>
+  </div>
+  <!-- Use any element to open/show the overlay navigation menu -->
+  <span onclick="openNav()">open</span>
+  <!-- MAIN PAGE CONTENT -->
+  <div id="main-content">
 
-    <!-- MAIN PAGE CONTENT -->
-    <div id="main-content">
-
-      <!-- PROJECT HEADER -->
-      <div id="project-header">
-        <div class="main-title">Animachine</div>
-        <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team of hackers and nerds at Youin3D in Berlin to design, test and build the system and the code to realise this project. We started with a digital rendering of what the final project should look like. After a short creative briefing about what it should do, given to us by our project partners, we rolled up our sleeves and did the detailed design i.e. the 'how' part. It was then installed as an interactive display in the Alexa Shopping Centre in central Berlin. Our project partners were McCann Worldgroup Deutschland, Stiftung Artenschutz and their respective collaborators.</div>
-        <image class="project-header-image" src="../assets/images/animachine.png">
+    <!-- PROJECT HEADER -->
+    <div id="project-header">
+      <div class="main-title">Animachine</div>
+      <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team of hackers and nerds at Youin3D in Berlin to design, test and build the system and the code to realise this project. We started with a digital rendering of what the final project should look like. After a short creative briefing about what it should do, given to us by our project partners, we rolled up our sleeves and did the detailed design i.e. the 'how' part. It was then installed as an interactive display in the Alexa Shopping Centre in central Berlin. Our project partners were McCann Worldgroup Deutschland, Stiftung Artenschutz and their respective collaborators.</div>
+      <image class="project-header-image" src="../assets/images/animachine.png">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -54,50 +142,50 @@
       <div id="project-gallery">
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_1.jpeg" class="gallery-image">
-              <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_2.jpeg" class="gallery-image">
-              <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_3.jpeg" class="gallery-image">
-              <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_4.jpeg" class="gallery-image">
-              <span class="image-caption">Cat-Ba Langur 3D model finished printing.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_5.jpeg" class="gallery-image">
-              <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_6.jpg" class="gallery-image">
-              <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_7.jpg" class="gallery-image">
-              <span class="image-caption">Cat-Ba Langur</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_8.jpg" class="gallery-image">
-              <span class="image-caption">The 3d printed sculptures, modelled by artist Sam3, were auctioned with all proceeds donated towards Cat-Ba Langur conservation.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_9.png" class="gallery-image">
-              <span class="image-caption">Jan and I deploying/setting up the system in Alexa Shopping Centre, Berlin.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_10.png" class="gallery-image">
-              <span class="image-caption">Jan firing up the Python code I wrote to automate the control of the 3D printer and pause and resume printing based on watching for "#animachine" hashtags in tweets via the REST API from Twitter.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img loading="lazy" src="../assets/images/animachine_11.png" class="gallery-image">
-              <span class="image-caption">Jan closing up the service panel hiding the computer, UPS (backup power supply), and UMTS modem.</span>
-            </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_1.jpeg" class="gallery-image">
+            <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_2.jpeg" class="gallery-image">
+            <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_3.jpeg" class="gallery-image">
+            <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_4.jpeg" class="gallery-image">
+            <span class="image-caption">Cat-Ba Langur 3D model finished printing.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_5.jpeg" class="gallery-image">
+            <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_6.jpg" class="gallery-image">
+            <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_7.jpg" class="gallery-image">
+            <span class="image-caption">Cat-Ba Langur</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_8.jpg" class="gallery-image">
+            <span class="image-caption">The 3d printed sculptures, modelled by artist Sam3, were auctioned with all proceeds donated towards Cat-Ba Langur conservation.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_9.png" class="gallery-image">
+            <span class="image-caption">Jan and I deploying/setting up the system in Alexa Shopping Centre, Berlin.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_10.png" class="gallery-image">
+            <span class="image-caption">Jan firing up the Python code I wrote to automate the control of the 3D printer and pause and resume printing based on watching for "#animachine" hashtags in tweets via the REST API from Twitter.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/animachine_11.png" class="gallery-image">
+            <span class="image-caption">Jan closing up the service panel hiding the computer, UPS (backup power supply), and UMTS modem.</span>
+          </div>
         </div>
       </div>
     </div>
@@ -109,5 +197,5 @@
       </a>
     </div>
 
-	</body>
-</html>
+  </body>
+  </html>
