--- a/art/writing.html
+++ b/art/writing.html
@@ -13,7 +13,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 	<head>
 		<meta charset="utf-8">
      <link rel="icon" href=../assets/icons/favicon.ico" />
-     <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
+     <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../css/layout.css">
@@ -26,7 +26,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div class="navbar">
       <a class="nav-title-link" href="../index.html">
 
-        <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</span><span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
+        <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span><span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
       </a>
     </div>
 
