--- a/index.html
+++ b/index.html
@@ -120,76 +120,76 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div class="overlay-content">
       <p>Home:</p>
       <hr>
-      <a href="./index.html">> Home</a>
-      <a href="./home/bio.html">> Bio</a>
-      <a href="./home/contact.html">> Contact</a>
+      <a href="../index.html">> Home</a>
+      <a href="../home/bio.html">> Bio</a>
+      <a href="../home/contact.html">> Contact</a>
       <p>Portfolio > Projects:</p>
       <hr>
-      <a href="./projects/reprap.html">> Reprap Opensource 3D Printer</a>
-      <a href="./projects/animachine.html">> Animachine @Youin3D, Berlin</a>
-      <a href="./projects/buildingbanter.html">> Industrial Energy Monitoring</a>
-      <a href="./projects/classic4.html">> Medical Device Firmware</a>
-      <a href="./projects/nanode.html">> Nanode, DIY IoT Device</a>
-      <a href="./projects/ltfhc.html">> Electronic Medical Records</a>
-      <a href="./projects/thinkfarm.html">> Sustainability Research</a>
-      <a href="./projects/ose.html">> Open Source Ecology</a>
+      <a href="../projects/reprap.html">> Reprap Opensource 3D Printer</a>
+      <a href="../projects/animachine.html">> Animachine @Youin3D, Berlin</a>
+      <a href="../projects/buildingbanter.html">> Industrial Energy Monitoring</a>
+      <a href="../projects/classic4.html">> Medical Device Firmware</a>
+      <a href="../projects/nanode.html">> Nanode, DIY IoT Device</a>
+      <a href="../projects/ltfhc.html">> Electronic Medical Records</a>
+      <a href="../projects/thinkfarm.html">> Sustainability Research</a>
+      <a href="../projects/ose.html">> Open Source Ecology</a>
       <p>Portfolio > Actions:</p>
       <hr>
-      <a href="./actions/ucloccupation.html">> UCL Occupation</a>
-      <a href="./actions/occupylondon.html">> Occupy London Tech Team</a>
-      <a href="./actions/cryptoparty.html">> Cryptoparty London</a>
-      <a href="./actions/hurricanesandy.html">> Hurricane Hackers</a>
-      <a href="./actions/fliehkraft.html">> Fliehkraft, Berlin</a>
-      <a href="./actions/ecovillage.html">> Eco Village</a>
+      <a href="../actions/ucloccupation.html">> UCL Occupation</a>
+      <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
+      <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
+      <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
+      <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
+      <a href="../actions/ecovillage.html">> Eco Village</a>
       <p>Portfolio > Academia:</p>
       <hr>
-      <a href="./academia/ch.html">> Overview</a>
-      <a href="./academia/durham.html">> About</a>
-      <a href="./academia/mit.html">> Curriculum Vitae</a>
+      <a href="../academia/ch.html">> Overview</a>
+      <a href="../academia/durham.html">> About</a>
+      <a href="../academia/mit.html">> Curriculum Vitae</a>
       <p>Portfolio > Creative:</p>
       <hr>
-      <a href="./art/writing.html">> Writing</a>
-      <a href="./art/artwork.html">> Artwork</a>
-      <a href="./art/concepts.html">> Concepts & Design</a>
+      <a href="../art/writing.html">> Writing</a>
+      <a href="../art/artwork.html">> Artwork</a>
+      <a href="../art/concepts.html">> Concepts & Design</a>
       <p>Portfolio > Talks:</p>
       <hr>
-      <a href="./talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
-      <a href="./talks/pp_intl.html">> RW Society @PP Intl</a>
-      <a href="./talks/fabrica.html">> Trust but Verify @Fabrica</a>
-      <a href="./talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
-      <a href="./talks/talklist.html">> List: Talks</a>
+      <a href="../talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
+      <a href="../talks/pp_intl.html">> RW Society @PP Intl</a>
+      <a href="../talks/fabrica.html">> Trust but Verify @Fabrica</a>
+      <a href="../talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
+      <a href="../talks/talklist.html">> List: Talks</a>
       <p>Lists of things I like:</p>
       <hr>
-      <a href="./art/poetrylist.html">> Poetry</a>
-      <a href="./art/filmlist.html">> Film</a>
-      <a href="./art/booklist.html">> Books</a>
-      <a href="./art/musiclist.html">> Music</a>
+      <a href="../art/poetrylist.html">> Poetry</a>
+      <a href="../art/filmlist.html">> Film</a>
+      <a href="../art/booklist.html">> Books</a>
+      <a href="../art/musiclist.html">> Music</a>
       <p>Service > Consulting</p>
       <hr>
-      <a href="./service/engineering.html">> IT / Engineering</a>
-      <a href="./service/security.html">> Security</a>
-      <a href="./service/sustainability.html">> Sustainability</a>
+      <a href="../service/engineering.html">> IT / Engineering</a>
+      <a href="../service/security.html">> Security</a>
+      <a href="../service/sustainability.html">> Sustainability</a>
       <p>Service > Programming:</p>
       <hr>
-      <a href="./service/programming.html">> Examples of My Work</a>
+      <a href="../service/programming.html">> Examples of My Work</a>
       <p>Service > Webdev:</p>
       <hr>
-      <a href="./service/web.html">> Webdesign and Development</a>
-      <a href="./service/web_examples.html">> Examples of My Work</a>
-      <a href="./service/web_feedback.html">> Client Feedback</a>
+      <a href="../service/web.html">> Webdesign and Development</a>
+      <a href="../service/web_examples.html">> Examples of My Work</a>
+      <a href="../service/web_feedback.html">> Client Feedback</a>
       <p>Service > PC Repair</p>
       <hr>
-      <a href="./service/onsite_repair.html">> Onsite Support</a>
-      <a href="./service/remote_repair.html">> Remote Support</a>
-      <a href="./service/repair_feedback.html">> Reviews</a>
+      <a href="../service/onsite_repair.html">> Onsite Support</a>
+      <a href="../service/remote_repair.html">> Remote Support</a>
+      <a href="../service/repair_feedback.html">> Reviews</a>
       <p>Service > Clients:</p>
       <hr>
-      <a href="./service/current_clients.html">> Current Clients</a>
-      <a href="./service/previous_clients.html">> Previous Clients</a>
+      <a href="../service/current_clients.html">> Current Clients</a>
+      <a href="../service/previous_clients.html">> Previous Clients</a>
       <p>Service > Personal:</p>
       <hr>
-      <a href="./service/mentoring.html">> Mentoring</a>
-      <a href="./service/business_development.html">> Business Development</a>
+      <a href="../service/mentoring.html">> Mentoring</a>
+      <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
   <!-- Use any element to open/show the overlay navigation menu -->
